[tool.poetry]
name = "rag-sdk"
version = "0.1.0"
description = ""
authors = ["A-baoYang <rubyyang0615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
httpx = "^0.26.0"
fake-useragent = "^1.4.0"


[tool.poetry.group.test.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
